--- a/package.json
+++ b/package.json
@@ -3,5 +3,14 @@
   "packageManager": "yarn@3.6.0",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@yarnpkg/sdks": "^3.0.0-rc.45",
+    "tsc": "^2.0.4",
+    "typescript": "^5.1.3"
+  },
+  "scripts": {
+    "compile": "tsc serve.ts"
   }
 }
