--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "compile": "tsc serve.ts"
-  }
+    "compile": "tsc -t es2022 -m es2022 serve.ts"
+  },
+  "type": "module"
 }
