--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-server",
   "packageManager": "yarn@3.6.0",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
